--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "next-temp",
+    "name": "image-search",
     "version": "0.0.1",
-    "description": "my app",
+    "description": "Using Google API to search image",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
