--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "Tu Ha Dinh",
     "license": "ISC",
     "dependencies": {
+        "mongoose": "^5.11.18",
         "next": "^10.0.7",
         "node-fetch": "^2.6.1",
         "react": "^17.0.1",
